--- a/Index.css
+++ b/Index.css
@@ -625,6 +625,11 @@ html {
     padding: 0;
     display: block;
     }
+    .banner-section img {
+    width: 100%;
+    height: auto;
+    display: block;
+}
 
 
     .trending-title {
@@ -1172,3 +1177,4 @@ html {
     color: #e0e0e0;
 
 }
+
